<resources>
    <string name="app_name">Sigavids Bogor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tagline">"Jauhi penyakitnya, bukan orangnya!"</string>
    <!--<string name="default_web_client_id">28633101848-evbbutucddaj38ecekuupsoulkopc6jj.apps.googleusercontent.com</string>-->


    <string name="ws_title_1">Selamat datang di Aplikasi <i>Sigavids Bogor</i></string>
    <string name="ws_content_1">Sistem Informasi Penanggulangan dan Pencegahan HIV / Aids Kota Bogor</string>

    <string name="ws_title_2">Cari Tahu apa itu HIV / Aids!</string>
    <string name="ws_content_2">Kenali penyakitnya dan jauhi faktor penyebabnya, bukan orangnya!</string>

    <string name="ws_title_3">Temukan Layanan Kesehatan penanganan HIV / Aids di Kota Bogor</string>
    <string name="ws_content_3">Dapatkan informasi mengenai Puskesmas dan Rumah Sakit yang dapat menangani HIV / Aids di Kota Bogor!</string>

    <string name="ws_title_4">Kamu Beresiko? Jangan takut untuk melakukan VCT!</string>
    <string name="ws_content_4">Tenaga Kesehatan professional akan membimbingmu melakukan VCT</string>

    <string name="ls_instruksi_1">Login menggunakan akun Google anda</string>
    <string name="ls_instruksi_2">Dengan masuk menggunakan akun Google,<br /> anda telah terdaftar di aplikasi <i>Sigavids Bogor</i></string>

    <string name="menu_1">Kenali HIV / Aids</string>
    <string name="menu_2">Temukan layanan HIV / Aids</string>
    <string name="menu_3">Dapatkan Teman Pendamping!</string>
    <string name="menu_4">Rekam MedisGue</string>
    <string name="menu_5">Q n A HIV/Aids</string>
    <string name="logout">Logout</string>
    <string name="about">Tentang Aplikasi</string>

    <string name="title_main">Event tentang HIV/Aids di Kota Bogor</string>

    <string name="title_activity_base">Sigavids Bogor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_layanan_hiv">Temukan Layanan HIV/Aids</string>

    <!-- Permissions strings start -->
    <string name="error_location_provider">Location services disabled</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="audio_permission">Audio Permission</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="contacts_permission">Contacts Permission</string>
    <string name="vibrate_permission">Vibrate Permission</string>
    <string name="receive_sms_permission">Receive sms Permission</string>
    <string name="read_sms_permission">Read sms Permission</string>
    <string name="call_phone_permission">Call Phone Permission</string>
    <string name="get_accounts_permission">Call Phone Permission</string>
    <string name="camera_permission_message">Camera permission allows you to take pictures and capture videos. Please allow in App Settings for additional functionality.</string>
    <string name="record_audio_permission_message">Record audio permission allows you to  record audios. Please allow in App Settings for additional functionality.</string>
    <string name="settings_audio_permission_message">Modify audio permission allows us access to your audios. Please allow in App Settings for additional functionality.</string>
    <string name="write_storage_permission_message">Write External permission allows us  access to your media. Please allow in App Settings for additional functionality.</string>
    <string name="read_storage_permission_message">Read External permission allows us to read your media. Please allow in App Settings for additional functionality.</string>
    <string name="read_contacts_permission_message">Read Contacts permission allows us to read your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="write_contacts_permission_message">Write Contacts permission allows you access to your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="vibrate_permission_message">Vibrate permission . Please allow in App Settings for additional functionality.</string>
    <string name="receive_sms_permission_message">Receive sms permission allows you  to receive SMS messages. Please allow in App Settings for additional functionality.</string>
    <string name="read_sms_permission_message">Read sms permission allows us access to your SMS messages. Please allow in App Settings for additional functionality.</string>
    <string name="call_phone_permission_message">Call phone permission allows you make calls. Please allow in App Settings for additional functionality.</string>
    <string name="get_accounts_permission_message">Get accounts permission . Please allow in App Settings for additional functionality.</string>
    <string name="no_thanks">No Thanks</string>
    <string name="yes">Yes</string>

    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <!--Permissions strings end -->

</resources>