<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_kenalihiv"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_1" />
        <item
            android:id="@+id/nav_layananhiv"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/nav_temanpendamping"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/menu_3" />
        <item
            android:id="@+id/nav_rekammedis"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_4" />
        <item
            android:id="@+id/nav_qna"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/menu_5" />
        <item
            android:id="@+id/menu_none"
            android:title=""
            android:visible="false"/>
    </group>

    <group>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout"/>
    </group>
</menu>
