<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="8dp"
    tools:context="layout.intro_first">

    <!-- TODO: Update blank fragment drawable_actionbar -->

    <TextView
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/bgimage3"
        android:layout_margin="16px"
        android:src="@drawable/bgsplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:text="@string/ws_title_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="8dp"
        android:id="@+id/description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/ws_content_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
