<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:src="@drawable/ic_teenager"
        android:layout_width="350dp"
        android:layout_height="254dp"
        android:id="@+id/imageView2"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:padding="4dp"
        android:background="#46ffffff"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:id="@+id/linearLayout2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/ls_instruksi_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/ls_instruksi_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="336dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_android_black_24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:gravity="center"
        android:text="@string/tagline"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />




</android.support.constraint.ConstraintLayout>
